--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,20 @@ header{
 }
 
 .menu{
+    position: sticky;
+    top: 0;
+    z-index: +1;
+
+    background-color:#fff;
     display: flexbox;
     align-items: center;
     width: 100%;
     padding-left: 10%;
     padding-right: 10%;
+    padding-top: 10px;
 
 }
+
 
 .menu ul{
     list-style-type: none;
@@ -166,6 +173,10 @@ li a img{
     font-weight: bold;
 }
 
+.carousel-indicators{
+    z-index: -1;
+}
+
 .carousel-indicators .active
 {
     background-image: linear-gradient(to right,#f91bb2, #f07a32) ;
@@ -174,6 +185,7 @@ li a img{
 .carousel-inner{
     display: flex;
     align-items: center;
+    z-index: -2;
 
     margin-top: 30px;
     margin-left: 10%;
