--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,13 @@ li a img{
     font-weight: bold;
 }
 
+#Apresentação-itens{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .carousel-indicators{
     z-index: -1;
 }
@@ -190,21 +197,22 @@ li a img{
     z-index: -2;
 
     margin-top: 30px;
-    margin-left: 10%;
-    margin-right: 10%;
 
-    width: 80%;
-    height: 400px;
+    width: 1500px;
+    height: 500px;
     background-color: #000;
 }
 
 #kits{
     /*background-color: #f07a32;   */
-    margin-top: 50px;
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-    display: block;
+    margin: 50px 10% 50px 10%;
+
+    position: relative;
+    display: inline-block;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
 }
 
 #kits h2{
@@ -235,16 +243,22 @@ li a img{
 
 #kits .kits-layout{
     position: relative;
-    display: flex;
-    margin-top: 0px;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+    width: 1500px;
 
-    width: 100%;
+    background-color: #ef7637;
 }
 
 #kits .kits-layout .kit{
-    width: 20%;
+    width: 800px;
     height: 500px;
-    margin: 30px 2.5% 30px 2.5%;
+    margin: 30px 20px 30px 20px;
+
+    background-color: #16fa1f;
 }
 
 #kits .kits-layout .kit .kit-image{
