--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-/*--  f91bb2 f07a32 292c31
-
-*/
-
 body{
     padding: 0%;
     margin: 0%;
@@ -23,15 +19,10 @@ header{
     position: sticky;
     top: 0;
     z-index: +1;
+    font-size: 30px;
 
-    background-color:#fff;
-    display: flexbox;
-    align-items: center;
-    width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 10px;
-
+    background-color: #fff;
+    height: 100px;
 }
 
 
@@ -39,101 +30,85 @@ header{
     list-style-type: none;
     overflow: hidden;
     top: 0;
-    
-    width: 50%;
-
 }
 
 .menu ul li{
     position: relative;
     float: left;
-
 }
 
-.menu ul li a{
+.menu ul li a:not(.active){
     position: relative;
     display: block;
-
     color: #000;
-    text-decoration: none;
     text-align: center;
-    padding: 14px 16px;
-    
-}
-
-.menu ul li .active{
-    color: #fff;
+    text-decoration: none;
+    padding: 0px 10px 0px 10px;
 }
 
 .menu ul li a:hover:not(.active) {
     transform: scale(1.1);
 }
 
-.menu .celular-nav1{    
+.menu .menu-logo{
+    padding-top : 0;
+    width: 100px;
+    height: auto;
+}
+
+.menu ul li a img{
+    width: 30px;
+}
+
+.menu .celular-nav0{
     float: left;
-    width: 75%;
+    padding-left: 10%;
 }
 
-.menu .celular-nav2{    
-    padding: 0;
-    display: inline-flex;
-    width: 25%;
+.menu .celular-nav1{
+    float: left;
+    padding-top: 30px;
 }
 
-
-li a img{
-    height: 20px;
-}
-
-.active {
-    background-color: #000;
-    color: #fff;
-    text-transform: uppercase;
+.menu .celular-nav2{
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: flex-end;
+    padding-right: 10%;
+    padding-top: 30px;
 }
 
 .search-box{
-
-    background : #f5f5f5 ;
+    background: #f5f5f5;
     height: 50px;
+    margin-top: 0;/**/
     padding: 10px;
     border-radius: 40px;
-
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
     align-items: center;
-}
-
-.search-box img{
-    height: 20px;
 }
 
 .search-text{
     background: none;
     border: 0;
     outline: 0;
-
     padding: 0;
-
-    font-size: 16px;
-
     transition: 0.4s;
-
     width: 0;
 }
 
 .search-btn{
     width: 50px;
     height: 50px;
-
     display: flex;
     align-items: center;
-
     cursor: pointer;
 }
 
 .search-box:hover > .search-text{
-    width: 150px;
-    padding-left: 20px;
+    width: 250px;
+    padding-right: 20px;
 }
 
 .titulo{
@@ -199,7 +174,7 @@ li a img{
     margin-top: 30px;
 
     width: 1500px;
-    height: 500px;
+    height: 600px;
     background-color: #000;
 }
 
