--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,9 @@ header{
     z-index: +1;
     font-size: 30px;
 
-    background-color: #fff;
-    height: 100px;
+    background-image: linear-gradient(to bottom, #fff 95%, transparent);
+    height: 110px;
 }
-
 
 .menu ul{
     list-style-type: none;
@@ -155,6 +154,7 @@ header{
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-top: 30px;
 }
 
 .carousel-indicators{
@@ -167,47 +167,44 @@ header{
 }
 
 .carousel-inner{
-    display: flex;
-    align-items: center;
     z-index: -2;
-
-    margin-top: 30px;
-
+    background-color: #000;
     width: 1500px;
     height: 600px;
-    background-color: #000;
 }
 
 #kits{
-    /*background-color: #f07a32;   */
-    margin: 50px 10% 50px 10%;
-
-    position: relative;
-    display: inline-block;
-    flex-direction: row;
+    margin : 50px 0px 50px 0px;
+    display: flex;
+    /*flex-direction: row;*/
+    /**/flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-
+    /*align-items: cente;*/
 }
+
+#kits .titulo-kits{
+    width: 100%;
+    padding: 0 10% 0 10%;
+}
+
 
 #kits h2{
     text-transform: uppercase;
-    font-size: 20px;
     float: left;
+    height: 40px;
+    align-items: center;
 }
 
 #kits .titulo-kits button{
     position: relative;
     float: right;
-
-    margin-top: 5px;
-
-    background-image: linear-gradient(to right,#f91bb2 0%, #f07a32 75%) ;
-    color: #fff;
+    height: 40px;
+    background-image: linear-gradient(to right,#f91bb2 0%, #f07a32 75%);
     border: 0;
     border-radius: 5px;
     padding: 5px;
     font-weight: 40px;
+    color: #fff;
 }
 
 #kits .titulo-kits button:hover{
@@ -222,18 +219,13 @@ header{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    
     width: 1500px;
-
-    background-color: #ef7637;
 }
 
 #kits .kits-layout .kit{
     width: 800px;
     height: 500px;
     margin: 30px 20px 30px 20px;
-
-    background-color: #16fa1f;
 }
 
 #kits .kits-layout .kit .kit-image{
@@ -246,17 +238,16 @@ header{
 #kits .kits-layout .kit .kit-btn button{
     width: 100%;
     height: 40px;
-
     border: 0;
     border-radius: 5px;
-
     background-color: #ef7637;
 }
+
 
 #feedback{
     margin-top: 80px;
     background-image: linear-gradient(to top,#ff1179 0%, #ef7637 100%) ;
-    padding: 10px 0px 10px 0px;
+    /*padding: 10px 0px 10px 0px;*/
 }
 
 #feedback h2{
@@ -432,13 +423,6 @@ footer .forma-de-pagamento{
 footer .forma-de-pagamento p{
     float: left;
     margin: 10px 50px;
-}
-
-footer .forma-de-pagamento img{
-    float: right;
-    background-color: #f07a32;
-    margin: 10px 20px 10px 20px;
-    width: 10%;
 }
 
 footer .outros{
