--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,31 @@
-body{
-    padding: 0%;
-    margin: 0%;
-    border: 0px;
-    background-attachment: fixed;
-    background-color: #fff;
+.texto-menor {
+    font-size: 13px;
+}
+
+.divs-facilidades {
+    width: 325px;
+}
+
+.div-novidades {
+    width: 325px;
+}
+
+@media(min-width: 768px) {
+
+    .div-novidades {
+        width: 696px;
+    }
+
 }
 
 header{
-    position: relative;
-    width: 100%;
-    text-align: center;
-    color: #fff;
     background-color: #f07a32;
 }
 
-.menu{
+#menu-top{
     position: sticky;
     top: 0;
-    z-index: +1;
-    font-size: 30px;
-}
-
-.menu ul li a img{
-    width: 30px;
+    z-index: +5;
 }
 
 .search-box{
@@ -61,31 +64,15 @@ header{
 .titulo{
     margin-top: 50px;
     text-align: center;
+    margin: 30px 0 30px 0;
 }
 
-.titulo h1{
-    font-size: 30px;
-}
 #strong-text{
     background-image: linear-gradient(to right,#f91bb2 0%, #f07a32 75%) ;
-
-    /* Segundo passo: apagar do fundo tudo que não estiver imediatamente atrás de texto */
     background-clip: text;
-    -webkit-background-clip: text; /* Alguns navegadores precisam do prefixo */
-
-    /* Terceiro passo: apagar o texto, deixando apenas o fundo atrás dele */
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-
-    /* Cor que contraste com o degradê, caso o navegador não suporte `background-clip: text` */
     color: black;
-}
-
-.titulo p{
-    margin-top: 25px;
-    font-size: 15px;
-    margin-left: 25%;
-    margin-right: 25%;
-
 }
 
 .titulo button{
@@ -97,103 +84,31 @@ header{
     font-weight: bold;
 }
 
-#Apresentação-itens{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 30px;
-}
-
-.carousel-indicators{
-    z-index: -1;
-}
-
 .carousel-indicators .active
 {
     background-image: linear-gradient(to right,#f91bb2, #f07a32) ;
 }
 
-.carousel-inner{
-    z-index: -2;
-    background-color: #000;
-    width: 1500px;
-    height: 630px;
-}
-
-#kits{
-    margin : 50px 0px 50px 0px;
-    display: flex;
-    /*flex-direction: row;*/
-    /**/flex-wrap: wrap;
-    justify-content: center;
-    /*align-items: cente;*/
-}
-
-#kits .titulo-kits{
-    width: 100%;
-    padding: 0 10% 0 10%;
-}
-
-
-#kits h2{
-    text-transform: uppercase;
-    float: left;
-    height: 40px;
-    align-items: center;
-}
-
-#kits .titulo-kits button{
-    position: relative;
-    float: right;
-    height: 40px;
-    background-image: linear-gradient(to right,#f91bb2 0%, #f07a32 75%);
+#Objetivo .objetivo-btn button{ 
     border: 0;
-    border-radius: 5px;
-    padding: 5px;
-    font-weight: 40px;
-    color: #fff;
+    border-radius: 50%;
+    background-color: #ef7a33;
 }
 
-#kits .titulo-kits button:hover{
-    background-image: linear-gradient(to right,#f91bb2 50%, #f07a32 100%) ;
-    transition: 0.4s;
-    transform: scale(1.01);
-}
-
-#kits .kits-layout{
+.underline{
+    margin-left: 33.3%;
+    margin-right: 33.3%;
+    width: 33.5%;
     position: relative;
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 1500px;
-}
-
-#kits .kits-layout .kit{
-    width: 800px;
-    height: 500px;
-    margin: 30px 20px 30px 20px;
-}
-
-#kits .kits-layout .kit .kit-image{
-    background-color: #292c31;
-    height: 500px;
-    margin: 5px 0px 5px 0px;
+    height: 5px;
+    background-color: #f07a32;
     border-radius: 5px;
+    box-shadow: -2px 2px #f91bb2;
 }
-
-#kits .kits-layout .kit .kit-btn button{
-    width: 100%;
-    height: 40px;
-    border: 0;
-    border-radius: 5px;
-    background-color: #ef7637;
-}
-
 
 #feedback{
-    margin-top: 80px;
+    margin: 0px 10px 0px 10px;
+    border-radius: 5px;
     background-image: linear-gradient(to top,#ff1179 0%, #ef7637 100%) ;
     /*padding: 10px 0px 10px 0px;*/
 }
@@ -221,119 +136,24 @@ header{
     margin-bottom: 30px;
 }
 
-.cartaoFeedback{
-    background-color: #ef7637;
-    margin: 0 20px 0 20px;    
-    width: 300px;
-    height: 300px;
-
-    word-wrap: break-word;
-}
-
-.cartaoFeedback img{
+#cartaoFeedback img{
     width: 100px;
     height: 100px;
     border-radius: 50%;
     margin: 10px 50px 10px 10px;
-
     float: left;
 }
 
-#objetivo{
-    position: relative;
-    display: inline-block;
-    width: 80%;
-    margin: 100px 10% 0 10%;
-
-    text-align: center;
-}
-
-#objetivo .underline{
-    margin-left: 33.3%;
-    margin-right: 33.3%;
-        
-    width: 33.5%;
-    position: relative;
-
-    height: 5px;
-
-    background-color: #f07a32;
-    border-radius: 5px;
-
-    box-shadow: -2px 2px #f91bb2;
-}
-
-#objetivo .icons-layout{
-    margin-top: 30px;
-    width: 100%;
-
-    position: relative;
-    display: inline-flex;
-}
-
-#objetivo .icons-layout .objetivo-btn{
-    width: 20%;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-}
-
-#objetivo .icons-layout .objetivo-btn button{
-    
-    width: 220px;
-    height: 220px;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-
-    border: 0;
-    border-radius: 50%;
-
-    background-color: #ef7a33;
-}
-
-#objetivo .icons-layout .objetivo-btn img{   
-    width: 180px;    
-}
-
-#instagram{
-    margin-top: 50px;
-
-    background-color: #292c31;
-
-    position: relative;
-    
-    padding: 10px 5% 10px 5%;
-}
-
-#Cadastro-email{
-    position: relative;
-    display: inline-block;
-
-    width: 100%;
-
-    padding: 30px 10% 20px 10%;
-    margin: 20px 0 20px 0;
-
-    color: #f5f5f5;
-
-    background-color: #ff0f7c;
-}
-
-#Cadastro-email .texto-email p{
-        float: left;
-        
-        font-weight: bold;
-}
-
 #Cadastro-email form {
-    float: right;
-
+    margin: 0px 10px 0px 10px;
+    width: 80%;
     background-color: #fff;
     padding: 4px;
-
-    border-radius: 10px;
+    border-radius: 5px;
   }
   
 #Cadastro-email  form > input {
+    width: 90%;
     background: none;
     border: 0;
     outline: 0;
@@ -344,54 +164,5 @@ header{
     border: none;
     color: #fff;
     padding: 4px 10px;
-
     border-radius: 10px;
   }
-
-footer{
-    background-color: #1e0b11;
-    color: #fff;
-    padding: 10px 10% 5% 10%;
-}
-
-footer h2{
-    margin-left: 30px;
-    text-transform: uppercase;
-}
-
-footer .forma-de-pagamento{
-    
-    background-color: #292c31;
-    width: 100%;
-
-    position: relative;
-    display: inline-flex;
-}
-
-footer .forma-de-pagamento p{
-    float: left;
-    margin: 10px 50px;
-}
-
-footer .outros{
-    margin-top: 30px;
-    position: relative;
-    display: inline-block;
-    width: 100%;
-}
-
-footer .outros .Atendimento{
-    float: left;
-}
-
-footer .outros .menu-footer{
-    float: right;
-    margin-right: 40%;
-    position: relative;
-    display: block;
-}
-
-footer .outros .menu-footer a{
-    text-decoration: none;
-    color: #fff;
-}
